@@ -1,6 +1,7 @@
 2026-01-09 Daniel Siepmann (Codappix GmbH)  <daniel.siepmann@codappix.com>
 
     * Centralize TCA access to allow modification, resolves #382
+    * Enhance TCA repository with process-related methods, resolves #393
 
 2026-01-08 Francois Suter (Idéative)  <typo3@ideative.ch>
 
